test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-borrowed.good
init-field-dflt-nonnil-owned-from-nonnil-borrowed.chpl:11: error: Cannot initialize 'owned MyClass' from a 'borrowed MyClass'
